test/cases/global_variable_redeclaration.zig
// dummy comment
var foo = false;
var foo = true;

// error
//
// :2:5: error: duplicate struct member name 'foo'
// :3:5: note: duplicate name here
// :2:1: note: struct declared here
